# C-

./: .gitignore
eigen_testing/: CMakeLists.txt  main.cpp
retina/: BasicCell.h  CMakeLists.txt  Cell.h  LocalEdgeDetector.h  MatrixOps.cpp  NetworkModel.h  OffAlpha.h  OnAlpha.h  OnDSGC.h  OnOSGC.h  OnOffDSGC.h  Stim.h  eigen_types.h  everything.h  main.cpp  stimuli.cpp  type_defs.h  types.h  utils.cpp  utils.h
